--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 Nom de l'arpiste</p>
+            <p>&copy; 2024 Nom de l'artiste</p>
         </footer>
         <script src="js/script.js"></script>
     </body>
